# cheru

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calculator.rs  commands.rs  config.rs  lib.rs  main.rs  matcher.rs
src-tauri/src/indexer/: linux.rs  macos.rs  mod.rs
src/components/: ActionBar.module.css  ActionBar.tsx  PreviewPanel.module.css  PreviewPanel.tsx  ResultsList.module.css  ResultsList.tsx  SearchBar.module.css  SearchBar.tsx
src/hooks/: useLauncher.ts
src/types/: launcher.ts
