[package]
name = "cheru"
version = "0.1.0"
edition = "2021"

[lib]
name = "cheru_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cheru"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
thiserror = "2"
dirs = "6"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
